login page added

--- a/web.html
+++ b/web.html
@@ -1,150 +1,156 @@
 <html>
+
 <head>
-<Title>done</Title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">      
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>           
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script> 
+    <Title>RANKERSBYTE</Title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 
-  <!-- nav bar mobile menu script -->
-  <script>
-	$(document).ready(function(){
-		$('.parallax').parallax();
-		$(".button-collapse").sideNav();
-	});
-	
-  </script>
 
-  <!-- CSS styles -->
 
-  <style>
-	  .nav-wrapper {
-	  background-color: #ffc107 !important;
-	  }
+    <!-- nav bar mobile menu script -->
+    <script>
+        $(document).ready(function() {
+            $('.parallax').parallax();
+            $(".button-collapse").sideNav();
+        });
+    </script>
 
-	  .page-footer{
-	  background-color: #ffc107 !important;
-	  }
+    <!-- CSS styles -->
 
-	  .container{
-	  width: 1400px;
-          }
+    <style>
+        .nav-wrapper {
+            background-color: #ffc107 !important;
+        }
 
-	 .parallax-container {
-	  height: 650px;
-	  }
-	
-	 .row.upper {
-	  padding-left: 190px;
-	  padding-top: 50px;
-	  }
+        .page-footer {
+            background-color: #ffc107 !important;
+        }
 
-  </style>
-          
+        .container {
+            width: 1400px;
+        }
+
+        .parallax-container {
+            height: 650px;
+        }
+
+        .row.upper {
+            padding-left: 190px;
+            padding-top: 50px;
+        }
+    </style>
+
 </head>
 
 <body>
 
-<!-- header -->
-<header>
- <!-- navigation bar -->
- <nav>
-    <div class="nav-wrapper">
-	<div class= "container">
-	      <a href="#!" class="brand-logo">Rankersbyte</a>
-	      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <!-- header -->
+    <header>
+        <!-- navigation bar -->
 
-	      <ul class="right hide-on-med-and-down">
-		<li  class="active"><a href="Home.html">Home</a></li>
-		<li><a href="Courses.html">Courses</a></li>
-		<li><a href="Tests.html">Tests</a></li>
-		<li><a href="Contact Us.html">Contact Us</a></li>
-		<li><a href="Signin.html">Sign in</a></li>
-	      </ul>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper">
+                    <div class="container">
+                        <a href="#!" class="brand-logo">Rankersbyte</a>
+                        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 
-	      <ul class="side-nav" id="mobile-demo">
-		<li  class="active"><a href="Home.html">Home</a></li>
-		<li><a href="Courses.html">Courses</a></li>
-		<li><a href="Tests.html">Tests</a></li>
-		<li><a href="Contact Us.html">Contact Us</a></li>
-	      </ul>
-	</div>
-    </div>
- </nav>
-  <!-- navigation bar closed -->
-</header>
-<!--header closed-->
+                        <ul class="right hide-on-med-and-down">
+                            <li class="active"><a href="Home.html">Home</a></li>
+                            <li><a href="Courses.html">Courses</a></li>
+                            <li><a href="Tests.html">Tests</a></li>
+                            <li><a href="Contact Us.html">Contact Us</a></li>
+                            <li><a href="signin.html">Sign in</a></li>
+                        </ul>
 
-<!-- main -->
-<main>
-    <div class="parallax-container">
-      <div class="parallax"><img src="home.jpg"></div>
-    </div> 
+                        <ul class="side-nav" id="mobile-demo">
+                            <li class="active"><a href="Home.html">Home</a></li>
+                            <li><a href="Courses.html">Courses</a></li>
+                            <li><a href="Tests.html">Tests</a></li>
+                            <li><a href="Contact Us.html">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!-- navigation bar closed -->
+    </header>
+    <!--header closed-->
 
-	<!-- mid layout -->
-   <div class="row upper">
+    <!-- main -->
+    <main>
+        <div class="parallax-container">
+            <div class="parallax"><img src="home.jpg"></div>
+        </div>
 
-<!-- Promo Content 1 goes here -->
-      <div class="col s4">
-	<div class="row">
-		<div class="col s12"><span class="flow-text">CAT</span></div>
-		<div class="col s12"><img src="mange.png"></div>
-		<div class="col s12"  style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
+        <!-- mid layout -->
+        <div class="row upper">
 
-	</div>	
-      </div>
-<!-- Promo Content 2 goes here -->
-      <div class="col s4">
-	<div class="row">
-		<div class="col s12"><span class="flow-text">JEE</span></div>
-		<div class="col s12"><img src="bnk.png"></div>
-		<div class="col s12" style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
+            <!-- Promo Content 1 goes here -->
+            <div class="col s4">
+                <div class="row">
+                    <div class="col s12"><span class="flow-text">CAT</span></div>
+                    <div class="col s12"><img src="mange.png"></div>
+                    <div class="col s12" style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
 
-	</div>	
-      </div>
-<!-- Promo Content 3 goes here -->
-      <div class="col s4">
-	<div class="row">
-		<div class="col s12"><span class="flow-text">SBI</span></div>
-		<div class="col s12"><img src="govn.png"></div>
-		<div class="col s12"  style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
+                </div>
+            </div>
+            <!-- Promo Content 2 goes here -->
+            <div class="col s4">
+                <div class="row">
+                    <div class="col s12"><span class="flow-text">JEE</span></div>
+                    <div class="col s12"><img src="bnk.png"></div>
+                    <div class="col s12" style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
 
-	</div>	
-      </div>
+                </div>
+            </div>
+            <!-- Promo Content 3 goes here -->
+            <div class="col s4">
+                <div class="row">
+                    <div class="col s12"><span class="flow-text">SBI</span></div>
+                    <div class="col s12"><img src="govn.png"></div>
+                    <div class="col s12" style="padding-top:20px"><a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>Free Mock</a></div>
 
-   		
-    </div>
+                </div>
+            </div>
 
-   <div class="parallax-container">
-      <div class="parallax"><img src="home1.jpg"></div>
-    </div>	     
-</main>
 
-<!-- footer -->
-  <footer class="page-footer">
-          <div class="container">
+        </div>
+
+        <div class="parallax-container">
+            <div class="parallax"><img src="home1.jpg"></div>
+        </div>
+    </main>
+
+    <!-- footer -->
+    <footer class="page-footer">
+        <div class="container">
             <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Study Today with Us !</h5>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Testimonials</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Terms and Conditions</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Privacy</a></li>
-                </ul>
-              </div>
+                <div class="col l6 s12">
+                    <h5 class="white-text">Study Today with Us !</h5>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Testimonials</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Terms and Conditions</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Privacy</a></li>
+                    </ul>
+                </div>
             </div>
-          </div>
-          <div class="footer-copyright">
+        </div>
+        <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">Prepare for exams in smart way</a>
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">Prepare for exams in smart way</a>
             </div>
-          </div>
-   </footer>
+        </div>
+    </footer>
+
 
 </body>
+
 </html>
