index file changed

--- a/signin.html
+++ b/signin.html
@@ -26,6 +26,10 @@
             width: 1400px;
         }
 
+        h5{
+            font-weight: bold;
+        }
+
         .input-field input[type=date]:focus+label,
         .input-field input[type=text]:focus+label,
         .input-field input[type=email]:focus+label,
@@ -66,8 +70,8 @@
 
     <main>
         <center>
-
-            <h5 class="indigo-text">Please, login into your account</h5>
+            <div class="section"></div>
+            <h5 class="deep-purple-text">LOGIN</h5>
             <div class="section"></div>
 
             <div class="container">
@@ -92,7 +96,7 @@
                                 <label for='password'>Password</label>
                             </div>
                             <label style='float: right;'>
-                  <a class='indigo-text' href='#!'><b>Forgot Password?</b></a>
+                  <a class='deep-purple-text' href='#!'><b>Forgot Password?</b></a>
               </label>
                         </div>
 
@@ -105,7 +109,7 @@
                     </form>
                 </div>
             </div>
-            <a href="#!" class="indigo-text">Create account</a>
+            <a href="#!" class="deep-purple-text">Create account</a>
         </center>
 
         <div class="section"></div>
